Merged source code. POM needs work to build.