@@ -1,43 +1,158 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>plugin</artifactId>
+    <version>1.610</version>
+  </parent>
 
-    <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>1.610</version>
-    </parent>
+  <properties>
+	<maven.compiler.source>1.8</maven.compiler.source>
+	<maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
-    <artifactId>klocwork</artifactId>
-    <packaging>hpi</packaging>
-    <name>Jenkins Klocwork Plug-in</name>
-    <version>1.24-SNAPSHOT</version>
-    <url>http://wiki.jenkins-ci.org/display/JENKINS/Klocwork+Plugin</url>
+  <artifactId>klocwork</artifactId>
+  <version>1.24.7-SNAPSHOT</version>
+  <name>Jenkins Klocwork Plug-in</name>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/Klocwork+Plugin</url>
+  <packaging>hpi</packaging>
 
-    <licenses>
-        <license>
-            <name>MIT license</name>
-            <comments>All source code is under the MIT license.</comments>
-        </license>
-    </licenses>
+  <licenses>
+    <license>
+      <name>MIT license</name>
+      <comments>All source code is under the MIT license.</comments>
+    </license>
+  </licenses>
 
-    <properties>
-        <jaxb.api.version>2.2.1</jaxb.api.version>
-        <jaxb.impl.version>2.2.1.1</jaxb.impl.version>
-        <jaxb2.maven.plugin.version>1.3</jaxb2.maven.plugin.version>
-        <saxon.version>9.1.0.8</saxon.version>
-        <dtkit.model.version>0.16</dtkit.model.version>
-        <dtkit.util.version>0.16</dtkit.util.version>
-        <java2html.version>5.0</java2html.version>
-        <junit.version>4.11</junit.version>
-        <mockito.version>1.8.5</mockito.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.5</maven.compiler.source>
-        <maven.compiler.target>1.5</maven.compiler.target>
-    </properties>
+  <developers>
+    <developer>
+      <id>michaelbaron</id>
+      <name>Michael Baron</name>
+      <email>michael.baron@emenda.com</email>
+    </developer>
+  </developers>
 
-    <dependencies>
+  <distributionManagement>
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <name>jenkinsci-releases</name>
+      <url>http://repo.jenkins-ci.org/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>maven.jenkins-ci.org</id>
+      <name>jenkinsci-snapshots</name>
+      <url>http://repo.jenkins-ci.org/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
+  <scm>
+    <connection>scm:git:ssh://github.com:jenkinsci/klocwork-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/klocwork-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/klocwork-plugin.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <repositories>
+    <repository>
+      <id>repo.jenkins-ci.org</id>
+      <url>http://repo.jenkins-ci.org/public/</url>
+    </repository>
+    <repository>
+        <id>Emenda</id>
+        <name>java-libs</name>
+        <url>https://gitlab.com/emenda/java-libs/raw/master</url>
+        <layout>default</layout>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.jenkins-ci.org</id>
+      <url>http://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.2-beta-5</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.1</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.scm</groupId>
+              <artifactId>maven-scm-provider-gitexe</artifactId>
+              <version>1.9.2</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.6.1</version>
+		  <!--Java version configuration, use Java 7-->
+		  <configuration>
+			<source>1.8</source>
+			<target>1.8</target>
+		  </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.18.1</version>
+          <configuration>
+            <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=512m</argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.jenkins-ci.tools</groupId>
+          <artifactId>maven-hpi-plugin</artifactId>
+          <extensions>true</extensions>
+          <configuration>
+            <compatibleSinceVersion>1.4.0</compatibleSinceVersion>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+  <dependencies>
+    <!-- Jenkins dependencies -->
+    <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>dashboard-view</artifactId>
+            <version>2.0</version>
+            <optional>true</optional>
+        </dependency>
         <dependency>
+            <groupId>eu.emenda</groupId>
+            <artifactId>kwjlib</artifactId>
+            <version>2.9</version>
+        </dependency>
+		<dependency>
+ 			<groupId>org.jenkins-ci.plugins</groupId>
+ 			<artifactId>junit</artifactId>
+ 			<version>1.5</version>
+ 		</dependency>
+        <dependency>
+ 			<groupId>org.jenkins-ci.plugins</groupId>
+ 			<artifactId>matrix-project</artifactId>
+ 			<version>1.4</version>
+ 		</dependency>
+		<dependency>
           <groupId>joda-time</groupId>
           <artifactId>joda-time</artifactId>
           <version>2.9.7</version>
@@ -55,133 +170,5 @@
             <version>1.58</version>
             <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>matrix-project</artifactId>
-            <version>1.8</version>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>eu.emenda</groupId>
-            <artifactId>kwjlib</artifactId>
-            <version>2.9</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>dashboard-view</artifactId>
-            <version>2.0</version>
-            <optional>true</optional>
-        </dependency>
-
-    </dependencies>
-
-    <repositories>
-        <repository>
-            <id>Emenda</id>
-            <name>java-libs</name>
-            <url>https://gitlab.com/emenda/java-libs/raw/master</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
-    <build>
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>${jaxb2.maven.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <packageName>com.thalesgroup.hudson.plugins.klocwork.model</packageName>
-                    <schemaDirectory>${basedir}/src/main/resources/com/thalesgroup/hudson/plugins/klocwork/model/xsd
-                    </schemaDirectory>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.0</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>net.sourceforge.saxon</groupId>
-                                    <artifactId>saxon</artifactId>
-                                    <version>9.1.0.8</version>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/klocwork/WEB-INF/lib
-                                    </outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>eu.emenda</groupId>
-                                    <artifactId>kwjlib</artifactId>
-                                    <version>2.9</version>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/klocwork/WEB-INF/lib
-                                    </outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>net.sourceforge.saxon</groupId>
-                                    <artifactId>saxon</artifactId>
-                                    <version>9.1.0.8</version>
-                                    <classifier>s9api</classifier>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/klocwork/WEB-INF/lib
-                                    </outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>net.sourceforge.saxon</groupId>
-                                    <artifactId>saxon</artifactId>
-                                    <version>9.1.0.8</version>
-                                    <classifier>dom</classifier>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/klocwork/WEB-INF/lib
-                                    </outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-        </plugins>
-    </build>
-
-    <scm>
-        <connection>scm:git:git@github.com:cittools/klocwork-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:cittools/klocwork-plugin.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
-
+  </dependencies>
 </project>
